# Scavenger

./: README.md
contracts/scavenger/: Cargo.toml  VERIFICATION.md
contracts/scavenger/src/: contract.rs  events.rs  lib.rs  storage.rs  types.rs
docs/: PARTICIPANTS_STORAGE_IMPLEMENTATION.md  TRANSFER_HISTORY_IMPLEMENTATION.md
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  router.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/context/: AuthContext.tsx  ContractContext.tsx  WalletContext.tsx
frontend/src/lib/: helpers.ts
frontend/src/pages/: CollectorDashboardPage.tsx  IncentivesPage.tsx  LandingPage.tsx  ManufacturerDashboardPage.tsx  RecyclerDashboard.tsx  WasteListPage.tsx
stellar-contract/src/: lib.rs  test_transfer_path_validation.rs  types.rs
stellar-contract/test_snapshots/test/: test_empty_transfer_history.1.json  test_is_participant_registered.1.json  test_register_participant_duplicate.1.json  test_transfer_history_chronological.1.json  test_transfer_history_different_wastes.1.json  test_transfer_history_immutable.1.json  test_transfer_waste.1.json  test_transfer_waste_not_owner.1.json  test_transfer_waste_unregistered_receiver.1.json  test_transfer_waste_unregistered_sender.1.json
stellar-contract/tests/: edge_cases_extra_test.rs  edge_cases_test.rs  get_all_participants_test.rs  max_weight_validation_test.rs  pause_test.rs
